# ml-engineer-azure

./: Pipfile
capstone/: README.md  automl.ipynb  config.json  entry_script.py  hyperdrive.ipynb  hyperdrive.py  logs.py  pyproject.toml  sample_request_data.txt  test_endpoint.py  test_endpoint_hyperdrive.py
capstone/capstone/: config.py  data.py
capstone/data/processed/resolution=5min/: payload.json  test.csv  variable_names.json
capstone/hyperdrive_env/: azureml_environment.json  conda_dependencies.yml
project_1/: README.md  train.py  udacity-project.ipynb
project_2/: README.md  benchmark.sh  data.py  endpoint.py  logs.py  project_2_MLOps.ipynb
project_2/swagger/: swagger.json  swagger.sh
